[gd_scene load_steps=6 format=2]

[ext_resource path="res://Dialogue/EndTextLogic.gd" type="Script" id=1]
[ext_resource path="res://Dialogue/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets_Audio/Death_Screen_Sound.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.0431373, 0.560784, 0.105882, 0.956863 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
script = ExtResource( 1 )

[node name="Letter_Timer" type="Timer" parent="MarginContainer/Panel/Label"]

[node name="message_Timer" type="Timer" parent="MarginContainer/Panel/Label"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="timeout" from="MarginContainer/Panel/Label/Letter_Timer" to="MarginContainer/Panel/Label" method="_on_Letter_Timer_timeout"]
[connection signal="timeout" from="MarginContainer/Panel/Label/message_Timer" to="MarginContainer/Panel/Label" method="_on_message_Timer_timeout"]
